# GripperGit

./: Databasesql  Databasesql.txt  README.md  URScript.script  URScriptV1.script  documentation.txt  urscript_gripper.script.txt
ClientCode/: CMakeLists.txt  main.cpp
Database/: CMakeLists.txt  db.cpp  db.h  main.cpp
Database1/: CMakeLists.txt  Db.cpp  Db.h  main.cpp
GPIOTest1/: CMakeLists.txt  DCMotor.cpp  DCMotor.h  main.cpp
GPIOTest2/: CMakeLists.txt  DCMotor.cpp  main.cpp
GripperController/: CMakeLists.txt  GripperController.cpp  GripperController.h  main.cpp
InterruptTest/: CMakeLists.txt  main.cpp
MainCode/: .gitignore  CMakeLists.txt  DCMotor.cpp  Db.cpp  Db.h  URTCP.cpp  main.cpp  server.cpp  server.h
SP_Database/: CMakeLists.txt  Notes  db.cpp  db.h  main.cpp
TestCodes/: CMakeLists.txt  DCMotor.cpp  DCMotor.h  Db.cpp  Db.h  main.cpp
URTCP_Test1/: CMakeLists.txt  CMakeLists.txt.user.46e6c99  URTCP.cpp  URTCP.h  main.cpp
build-GPIOTest1-Desktop-Debug/: CMakeCache.txt  GPIOTest1  Makefile  cmake_install.cmake
build-GPIOTest1-Desktop-Debug/.cmake/api/v1/reply/: codemodel-v2-05b03f2c44681c1032f9.json  index-2024-04-09T11-06-01-0387.json  target-GPIOTest1-Debug-be0bb52a6f78a2bc847a.json  target-GPIOTest1-Debug-d82d9cecc266bf840167.json
build-GPIOTest1-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-92c4463aa9d9af719ec0.json  cmakeFiles-v1-929ecdea3636731dd2d7.json  cmakeFiles-v1-e37984b6cd41d5667757.json  codemodel-v2-6e9a057e733287434e14.json  codemodel-v2-843b3101cdefa6219175.json  index-2024-03-27T14-48-57-0095.json  index-2024-03-27T14-59-03-0927.json  target-GPIOTest1-Debug-54099dab3f11553019b0.json  target-GPIOTest1_autogen-Debug-4ffdff60f80e9f0ec756.json
build-InterruptTest-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-MainCode-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
build-URTCP_Test1-Desktop-Debug/: CMakeCache.txt  Makefile  URTCP_Test1  cmake_install.cmake
build-URTCP_Test1-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-373d0d1700ef9feabbf2.json  cmakeFiles-v1-02d6d2d7011bb573a99a.json  codemodel-v2-595bddbd61f05e62a12a.json  index-2024-04-01T09-52-00-0554.json  target-URTCP_Test1-Debug-f5d058112201cde647c4.json  target-URTCP_Test1_autogen-Debug-f1096615ff4066c1f9e6.json
